opam-version: "1.2"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
authors: ["Vincent Bernardoff <vb@luminar.eu.org>"]
homepage: "https://github.com/vbmithr/bitcointalk"
doc: "https://vbmithr.github.io/bitcointalk/doc"
license: "ISC"
dev-repo: "https://github.com/vbmithr/bitcointalk.git"
bug-reports: "https://github.com/vbmithr/bitcointalk/issues"
tags: []
available: [ ocaml-version >= "4.03.0"]
depends: [
  "jbuilder" {build}
  "core" {>= "114.35+03"}
  "ppx_xml_conv" {>= "114.35+03"}
]
depopts: []
build:[[ "jbuilder" "build" "@install" ]]
